# llvm-project

./: .gitignore  README.md
MustElide/: Example-3-goto.cpp  Example-4-default-arg.cpp  Example-7-Derived.cpp  Overall.cpp  TaskBase.h
P1689Examples/HelloWorld/: CMakeLists.txt  Hello-impl_part.cppm  Hello-interface_part.cppm  Hello.cppm  Impl.cpp  README.txt  Use.cpp  compile_commands.json  compile_commands.json.tmp  cxx_modules_rules_clang.cmake  p1689deps.json
P1689Examples/Simple/: CMakeLists.txt  README.txt  compile_commands.json  compile_commands.json.tmp  cxx_modules_rules_clang.cmake  p1689deps.json
P2477_Examples/: Example-all.cpp  Example-default-arg.cpp  Example-derived-class.cpp  Example-failure.cpp  Example-goto.cpp  Example-if.cpp  Example-mem-initializer.cpp  Example-var-in-if.cpp  TaskBase.h  std-coroutine.h
P2477_Examples/AsyncCase/: SimpleExecutor.h  Task.h  Testing.cpp  ThreadPool.h
ShouldElide/: Example-1-loop.cpp  Example-2-if.cpp  Example-4-default-arg.cpp  Example-5-var-in-if.cpp  Example-6-Mem-Initializer.cpp  Overall.cpp  ShouldElide.cpp  TaskBase.h
ShouldElide/experimental/: coroutine
clang/docs/: StandardCPlusPlusModules.rst
clang/include/clang/AST/: Expr.h  ExternalASTSource.h  StmtCXX.h
clang/include/clang/Basic/: Builtins.def  DiagnosticCommonKinds.td  DiagnosticDriverKinds.td  DiagnosticFrontendKinds.td  DiagnosticSemaKinds.td  LangOptions.def
clang/include/clang/Driver/: Options.td
clang/include/clang/Frontend/: DependencyOutputOptions.h  FrontendOptions.h
clang/include/clang/Lex/: ModuleMap.h  Preprocessor.h  PreprocessorOptions.h
clang/include/clang/Sema/: MultiplexExternalSemaSource.h  Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h  ASTReader.h  ASTWriter.h
clang/include/clang/Tooling/DependencyScanning/: DependencyScanningService.h  DependencyScanningTool.h  DependencyScanningWorker.h  ModuleDepCollector.h
clang/lib/AST/: DeclTemplate.cpp  Expr.cpp  ExternalASTSource.cpp  ODRHash.cpp  StmtCXX.cpp
clang/lib/CodeGen/: CGBuiltin.cpp  CGCoroutine.cpp  CGExpr.cpp  CGExprCXX.cpp  CodeGenAction.cpp  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  Clang.h
clang/lib/Frontend/: CompilerInstance.cpp  CompilerInvocation.cpp  FrontendActions.cpp
clang/lib/Lex/: Preprocessor.cpp
clang/lib/Parse/: ParseAST.cpp
clang/lib/Sema/: CoroutineStmtBuilder.h  MultiplexExternalSemaSource.cpp  SemaCoroutine.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExprCXX.cpp  SemaModule.cpp  SemaOverload.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderInternals.h  ASTWriter.cpp  ASTWriterDecl.cpp  GeneratePCH.cpp
clang/lib/Tooling/DependencyScanning/: DependencyScanningTool.cpp  DependencyScanningWorker.cpp  ModuleDepCollector.cpp
clang/test/CodeGenCXX/: pr70585.cppm
clang/test/Driver/: create_module_cache.cpp  module-fgen-reduced-bmi.cppm
clang/test/Modules/: no-transitive-change.cppm  one-phase-compilation-named-modules.cppm  polluted-operator.cppm  thinBMI-output.cppm
clang/tools/clang-scan-deps/: ClangScanDeps.cpp
clang/unittests/Serialization/: CMakeLists.txt  ThinBMIDeclsHashTest.cpp
libcxx/: CMakeLists.txt
libcxx/stdmodules/: CMakeLists.txt  std-coroutine.cppm  std-exception.cppm  std-type_traits.cppm  std-utility.cppm  std-vector.cppm  std.cppm
libcxx/test/std_modules/language.support/support.coroutines/end.to.end/: await_result.pass.cpp  generator.pass.cpp
libcxx/utils/libcxx/test/: dsl.py  params.py
llvm/include/llvm/: InitializePasses.h
llvm/include/llvm/Analysis/: FuncSpecCost.h  ModuleSummaryAnalysis.h
llvm/include/llvm/IR/: InstrTypes.h  Intrinsics.td  ModuleSummaryIndex.h  ModuleSummaryIndexYAML.h
llvm/include/llvm/Transforms/Scalar/: SCCP.h
llvm/lib/Analysis/: Analysis.cpp  CMakeLists.txt  FuncSpecCost.cpp  ModuleSummaryAnalysis.cpp
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/Bitcode/Reader/: BitcodeReader.cpp
llvm/lib/Bitcode/Writer/: BitcodeWriter.cpp
llvm/lib/IR/: AsmWriter.cpp
llvm/lib/LTO/: ThinLTOCodeGenerator.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassBuilderPipelines.cpp  PassRegistry.def
llvm/lib/Transforms/Coroutines/: CoroCleanup.cpp  CoroEarly.cpp  CoroElide.cpp  CoroFrame.cpp  CoroInstr.h  CoroInternal.h  CoroSplit.cpp
llvm/lib/Transforms/IPO/: FunctionImport.cpp  FunctionSpecialization.cpp  SCCP.cpp  ThinLTOBitcodeWriter.cpp  WholeProgramDevirt.cpp
llvm/lib/Transforms/Utils/: InlineFunction.cpp
llvm/test/Bitcode/: thinlto-alias.ll  thinlto-alias2.ll  thinlto-function-summary-callgraph-cast.ll  thinlto-function-summary-callgraph-pgo.ll  thinlto-function-summary-callgraph-profile-summary.ll  thinlto-function-summary-callgraph-relbf.ll  thinlto-function-summary-callgraph-sample-profile-summary.ll  thinlto-function-summary-callgraph.ll  thinlto-function-summary-refgraph.ll
(+7 files in other folders)
